Deploy: Dockerfile, papeis de usuario e health check