@@ -2,13 +2,14 @@ package com.gustavo.concursos.security;
 
 import com.gustavo.concursos.entity.Usuario;
 import com.gustavo.concursos.repository.UsuarioRepository;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -24,10 +25,12 @@ public class CustomUserDetailsService implements UserDetailsService {
         Usuario usuario = usuarioRepository.findByEmail(email)
                 .orElseThrow(() -> new UsernameNotFoundException("Usuario nao encontrado: " + email));
 
+        // O Spring Security espera o prefixo "ROLE_" nas autoridades;
+        // hasRole("ADMIN") procura por "ROLE_ADMIN".
         return new User(
                 usuario.getEmail(),
                 usuario.getSenhaHash(),
-                Collections.emptyList()
+                List.of(new SimpleGrantedAuthority("ROLE_" + usuario.getPapel()))
         );
     }
 }
